# mariner2cam

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pyre_configuration  Anleitung - Mariner2 - PI Zero W 1.1+2 outdated (ARM6).txt  CHANGELOG.md  CLAUDE.md  CompleteInstructionZero2.txt  Dockerfile  LICENSE.txt  README.md  README.rst  README_ORIG.rst  config.toml  github.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yaml  package.yaml  release.yaml
docs/: conf.py  contributing.rst  index.rst  requirements.rst  software-setup.rst  supported-printers.rst  troubleshooting.rst  wrapping-up.rst
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  index.tsx  theme.ts
frontend/src/components/: AppNav.tsx  FileDetailDialog.tsx  Main.tsx  PowerMenu.tsx  PrintControls.test.tsx  PrintControls.tsx  PrintProgress.test.tsx  PrintProgress.tsx  StatusIndicator.test.tsx  StatusIndicator.tsx  ThemeProvider.tsx  ThemeSwitcher.tsx
frontend/src/components/ui/: progress.tsx
frontend/src/lib/: api.test.ts  api.ts  themes.ts
frontend/src/pages/: Files.tsx  Index.tsx
gh-pages/: index.html
mariner/: config.py  printer.py
mariner/file_formats/: __init__.py  cipher.py  ctb_encrypted.py  utils.py
mariner/file_formats/tests/: bolts.ctb  test_ctb_encrypted_bolts.py
mariner/server/: __init__.py  api.py  app.py  utils.py
mariner/server/tests/: test_utils.py
mariner/tests/: test_mars.py  test_print_status_m4000.py  test_server.py
stubs/png/: __init__.pyi
stubs/serial/: __init__.pyi
stubs/toml/: __init__.pyi
stubs/typedstruct/: __init__.pyi
