[tool.poetry]
name = "mariner"
version = "0.3.1"
description = "Web application for controlling MSLA 3D Printers based on ChiTu controllers"
license = "MIT"
readme = "README.rst"
authors = [
  "Alejandro Mora <mail@alejandro.md>", 
  "Luiz Ribeiro <luizribeiro@gmail.com>",
  "Desterly", 
]

[tool.poetry.scripts]
mariner = 'mariner.server:main'

[tool.poetry.dependencies]
flask = "^3.0"
flask-caching = "^2.1"
Flask-WTF = "^1.2"
pypng = "^0.0.21"
pyre-extensions = "^0.0.29"
pyserial = "^3.5"
# Exclude 3.12.1: green (and unittest) are broken on that patch; see CPython #113267.
python = ">=3.11,<3.12.1 || >3.12.1,<4.0"
toml = "^0.10.2"
typedstruct = "0.1.0"
waitress = "^3.0"
whitenoise = "^6.5"
pycryptodome = "^3.15.0"
green = "^4.0.2"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
flake8 = "^7.0"
freezegun = "^1.4"
green = "^4.0"
pyexpect = "1.0.21"
pyfakefs = "^5.3"
pyre-check = "0.9.25"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"